libdiscover: Fix Discover doesn't show license or description of local package

When setting details of a package, also emit `licensesChanged` and `longDescriptionChanged`,
so when opening a local package using PackageKit backend, the
application page can show licenses and description when the details are
fetched.

BUG: 452150


(cherry picked from commit dc9ced728ab33251fcbb0d21c492ff2308992873)